--- a/content/projects/designing-a-home/index.mdx
+++ b/content/projects/designing-a-home/index.mdx
@@ -12,27 +12,35 @@ From 2017-2018, my wife and I had our home renovated. I designed the space, and 
 
 A friend had introduced me to SketchUp, and helped with some initial models of the space. Using these files as a starting point, I spent several months iterating on the design with increasing fidelity, revisiting the process as constraints emerged through demolition. Our house is close to 100 years old, and any renovation—especially in an old house⁠—is bound for surprises.
 
-<PostImage src="/projects/designing-a-home/IMG_0148.jpg" caption="Kitchen before" $size="large"/>
+<PostImage
+  src="/projects/designing-a-home/IMG_0148.jpg"
+  caption="Kitchen before"
+  $size="large"
+/>
 
-<PostImage src="/projects/designing-a-home/IMG_0343.jpg" caption="One such surprise: 6 inches of concrete under the previous kitchen floor" $size="large"/>
+<PostImage
+  src="/projects/designing-a-home/IMG_0343.jpg"
+  caption="One such surprise: 6 inches of concrete under the previous kitchen floor"
+  $size="large"
+/>
 
 Working in 3D allowed me to more carefully consider the spaces and sightlines than a typical plan or one-off render. Using a friend’s VR rig, I walked through the models to better understand flow and utility. Many of the fixtures and appliances considered had 3D models available, so I was able to audition them in the space before making a commitment. When options were presented during the construction, I was able to model each permutation to better understand it in context, rather than rush a decision or leave it solely to the builder. It also helped immensely that the builder was comfortable with SketchUp, so I could send ideas over for them to assess feasibility. In the end, the build came remarkably close to the model.
 
 <ImageCompare
-$size="large"
-image1="/projects/designing-a-home/0S7A7533-sketchup.jpg"
-image2="/projects/designing-a-home/0S7A7533.jpg"  
-caption="Comparison of SketchUp model and kitchen after"
-position="33"
+  $size="large"
+  image1="/projects/designing-a-home/0S7A7533-sketchup.jpg"
+  image2="/projects/designing-a-home/0S7A7533.jpg"
+  caption="Comparison of SketchUp model and kitchen after"
+  position="33"
 />
 
 The final design attempts to blend old with new, and mixes modern lines with natural materials. This was the first space I've designed, but I found the principles familiar to what I knew in other disciplines, and learned a lot about the process along the way. I go into more detail about a few of my favourite features below.
 
 <ImageCompare
-$size="large"
-image1="/projects/designing-a-home/0S7A7604-before.jpg"
-image2="/projects/designing-a-home/0S7A7604.jpg"
-caption="Comparison of mid-demoliton and final"
+  $size="large"
+  image1="/projects/designing-a-home/0S7A7604-before.jpg"
+  image2="/projects/designing-a-home/0S7A7604.jpg"
+  caption="Comparison of mid-demoliton and final"
 />
 
 <PostImage $size="full" src="/projects/designing-a-home/0S7A7712.jpg" />
@@ -47,7 +55,11 @@ caption="Comparison of mid-demoliton and final"
 
 In continuing the mix of old and new, I integrated Danish lighting from the 1950s in the dining room, and custom-made modern linear lighting in the kitchen.
 
-<PostImage $size="large" src="/projects/designing-a-home/0S7A7555.jpg" caption="One of three custom-made linear lights in the kitchen"/>
+<PostImage
+  $size="large"
+  src="/projects/designing-a-home/0S7A7555.jpg"
+  caption="One of three custom-made linear lights in the kitchen"
+/>
 
 The linear lights consist of flush-mount aluminum channels with diffusers, five-channel LED strips[^1] colour-matched to Philips Hue, dual PWM[^2] amplifiers (RGB and tunable white), Philips Hue LS+ controllers, and commercial power supplies.
 
@@ -59,10 +71,10 @@ In order to eliminate hotspots, I ran two light strips along the side walls of t
       <Video src="/video/projects/designing-a-home/light-assembly.mp4" />
     </GridItem>
     <GridItem $width={{ sm: '1/3 * 100%' }}>
-      <Img src="/projects/designing-a-home/IMG_0164x.jpg" sizes="400px"/>
+      <Img src="/projects/designing-a-home/IMG_0164x.jpg" sizes="400px" />
     </GridItem>
     <GridItem $width={{ sm: '1/3 * 100%' }}>
-      <Img src="/projects/designing-a-home/IMG_0140.jpg" sizes="400px"/>
+      <Img src="/projects/designing-a-home/IMG_0140.jpg" sizes="400px" />
     </GridItem>
   </Grid>
 </Figure>
@@ -72,13 +84,13 @@ For each fixture, I had an electrician run a standard line-voltage light switch 
 <Figure $size="large">
   <Grid $gutter="calc(var(--spaceDefault) / 2)">
     <GridItem $width={{ sm: '1/3 * 100%' }}>
-      <Img src="/projects/designing-a-home/IMG_0039.jpg" sizes="400px"/>
+      <Img src="/projects/designing-a-home/IMG_0039.jpg" sizes="400px" />
     </GridItem>
     <GridItem $width={{ sm: '1/3 * 100%' }}>
-      <Img src="/projects/designing-a-home/IMG_0164.jpg" sizes="400px"/>
+      <Img src="/projects/designing-a-home/IMG_0164.jpg" sizes="400px" />
     </GridItem>
     <GridItem $width={{ sm: '1/3 * 100%' }}>
-      <Img src="/projects/designing-a-home/IMG_0591.jpg" sizes="400px"/>
+      <Img src="/projects/designing-a-home/IMG_0591.jpg" sizes="400px" />
     </GridItem>
   </Grid>
 </Figure>
@@ -90,10 +102,10 @@ In terms of brightness, at peak output the three fixtures in the kitchen are cap
 <Figure $size="large">
   <Grid $gutter="calc(var(--spaceDefault) / 2)">
     <GridItem $width={{ sm: '1/3 * 100%' }}>
-      <Img src="/projects/designing-a-home/corner.jpg" sizes="400px"/>
+      <Img src="/projects/designing-a-home/corner.jpg" sizes="400px" />
     </GridItem>
     <GridItem $width={{ sm: '1/3 * 100%' }}>
-      <Img src="/projects/designing-a-home/IMG_9681.jpg" sizes="400px"/>
+      <Img src="/projects/designing-a-home/IMG_9681.jpg" sizes="400px" />
     </GridItem>
     <GridItem $width={{ sm: '1/3 * 100%' }}>
       <Video src="/video/projects/designing-a-home/controller-2.mp4" />
@@ -105,17 +117,29 @@ In terms of brightness, at peak output the three fixtures in the kitchen are cap
 
 Towards the back of the house, there is a bank of three full-height cabinets on the north wall. Behind the first door is a pantry, framed in baltic birch with adjustable shelves. The third door is more storage, mostly for cleaning and dog supplies. The centre door opens to a T-shaped powder room hidden behind the other cabinets.
 
-<PostImage $size="large" src="/projects/designing-a-home/0S7A7645.jpg" caption="The second handle on the left is a powder room. This lower level was previously an attached garage"/>
+<PostImage
+  $size="large"
+  src="/projects/designing-a-home/0S7A7645.jpg"
+  caption="The second handle on the left is a powder room. This lower level was previously an attached garage"
+/>
 
 I painted the powder room a deep navy, in contrast to the otherwise bright house. A feature wall has floor-to-ceiling period appropriate wallpaper by William Morris, in a pattern called Golden Lily[^4].
 
 I had a friend sandblast chrome bathroom fixtures to reveal the raw brass underneath, and treated them with an acid mixture to accelerate patina into cohesion with other original fixtures in the house.
 
-<PostImage $size="full" src="/projects/designing-a-home/0S7A8615.jpg" caption="Main floor powder room"/>
+<PostImage
+  $size="full"
+  src="/projects/designing-a-home/0S7A8615.jpg"
+  caption="Main floor powder room"
+/>
 
 When the powder room door opens, a ZigBee-enabled reed switch communicates with Home Assistant running on a Raspberry Pi to turn the lights on. If we're entertaining, the linear fixture outside the door can turn into an airplane-style occupancy indicator, turning red when occupied and green when available.
 
-<PostVideo $size="large" src="/video/projects/designing-a-home/occupancy-demo-color-corrected.mp4" caption="Door to main floor powder room with occupancy automation enabled" />
+<PostVideo
+  $size="large"
+  src="/video/projects/designing-a-home/occupancy-demo-color-corrected.mp4"
+  caption="Door to main floor powder room with occupancy automation enabled"
+/>
 
 [^1]: The lightstrips are called [Bifröst](https://sowilodesign.com/collections/bifrost/products/bifrost-147-pro-led-strip) and made by a company called [Sowilo DS](https://sowilodesign.com/). I was one of their first customers, and Mike from Sowilo was immensely helpful throughout this process.
 [^2]: PWM stands for [Pulse Width Modulation](https://en.wikipedia.org/wiki/Pulse-width_modulation).
