--- a/content/projects/hue-gallery/index.mdx
+++ b/content/projects/hue-gallery/index.mdx
@@ -14,124 +14,129 @@ This article was originally published in the December 2016 issue of [net magazin
 
 </Note>
 
-<Vimeo vimeoId="392018140" $size="large" caption="Finished result: Hue Gallery in action" commentary={[
-{
-time: 0.01,
-value: '<span>🎹</span>',
-},
-{
-time: 3.2,
-value: null,
-},
-{
-time: 4.5,
-value: 'peak Casey Neistat influence...',
-},
-{
-time: 8.5,
-value: null,
-},
-{
-time: 9.9,
-value: 'custom controller for Ikea sit-stand desk',
-},
-{
-time: 13.5,
-value: null,
-},
-{
-time: 14,
-value: 'it allows for programmatic control and realtime height feedback',
-},
-{
-time: 18.7,
-value: null,
-},
-{
-time: 23,
-value: `should've straightened this shot`,
-},
-{
-time: 29.2,
-value: null,
-},
-{
-time: 42.1,
-value: '<span>🌳</span>',
-},
-{
-time: 47.7,
-value: null,
-},
-{
-time: 50.7,
-value: '<span>🪁</span>',
-},
-{
-time: 53,
-value: null,
-},
-{
-time: 54,
-value: '<span>🌠</span> this clip is reversed',
-},
-{
-time: 57.3,
-value: null,
-},
-{
-time: 64.3,
-value: `<span>☀️</span> should've used a larger aperture to prevent that starburst`,
-},
-{
-time: 67.2,
-value: null,
-},
-{
-time: 67.7,
-value: 'sitting in a different spot here',
-},
-{
-time: '70.6',
-value: null,
-},
-{
-time: 75.8,
-value: '<span>☠️</span> RIP this plant',
-},
-{
-time: 78.3,
-value: null,
-},
-{
-time: '79',
-value: `haven't killed that snake plant yet though`,
-},
-{
-time: 83,
-value: null,
-},
-{
-time: 83.8,
-value: '<span>🎹</span>',
-},
-{
-time: 88.8,
-value: null,
-},
-{
-time: 95.2,
-value: '&ldquo;Your Eyes&rdquo; and &ldquo;Warm&rdquo;',
-},
-{
-time: 97.4,
-value: null,
-},
-{
-time: 97.9,
-value: `<a href="https://github.com/bpxl-labs/hue-gallery" target="_blank" rel="noopener noreferrer">github.com/bpxl-labs/hue-gallery</a>`,
-},
-]} />
+<Vimeo
+  vimeoId="392018140"
+  $size="large"
+  caption="Finished result: Hue Gallery in action"
+  commentary={[
+    {
+      time: 0.01,
+      value: '<span>🎹</span>',
+    },
+    {
+      time: 3.2,
+      value: null,
+    },
+    {
+      time: 4.5,
+      value: 'peak Casey Neistat influence...',
+    },
+    {
+      time: 8.5,
+      value: null,
+    },
+    {
+      time: 9.9,
+      value: 'custom controller for Ikea sit-stand desk',
+    },
+    {
+      time: 13.5,
+      value: null,
+    },
+    {
+      time: 14,
+      value: 'it allows for programmatic control and realtime height feedback',
+    },
+    {
+      time: 18.7,
+      value: null,
+    },
+    {
+      time: 23,
+      value: `should've straightened this shot`,
+    },
+    {
+      time: 29.2,
+      value: null,
+    },
+    {
+      time: 42.1,
+      value: '<span>🌳</span>',
+    },
+    {
+      time: 47.7,
+      value: null,
+    },
+    {
+      time: 50.7,
+      value: '<span>🪁</span>',
+    },
+    {
+      time: 53,
+      value: null,
+    },
+    {
+      time: 54,
+      value: '<span>🌠</span> this clip is reversed',
+    },
+    {
+      time: 57.3,
+      value: null,
+    },
+    {
+      time: 64.3,
+      value: `<span>☀️</span> should've used a larger aperture to prevent that starburst`,
+    },
+    {
+      time: 67.2,
+      value: null,
+    },
+    {
+      time: 67.7,
+      value: 'sitting in a different spot here',
+    },
+    {
+      time: '70.6',
+      value: null,
+    },
+    {
+      time: 75.8,
+      value: '<span>☠️</span> RIP this plant',
+    },
+    {
+      time: 78.3,
+      value: null,
+    },
+    {
+      time: '79',
+      value: `haven't killed that snake plant yet though`,
+    },
+    {
+      time: 83,
+      value: null,
+    },
+    {
+      time: 83.8,
+      value: '<span>🎹</span>',
+    },
+    {
+      time: 88.8,
+      value: null,
+    },
+    {
+      time: 95.2,
+      value: '&ldquo;Your Eyes&rdquo; and &ldquo;Warm&rdquo;',
+    },
+    {
+      time: 97.4,
+      value: null,
+    },
+    {
+      time: 97.9,
+      value: `<a href="https://github.com/bpxl-labs/hue-gallery" target="_blank" rel="noopener noreferrer">github.com/bpxl-labs/hue-gallery</a>`,
+    },
+  ]}
+/>
 
 In 2008, the number of internet-connected things exceeded Earth’s human population. By 2020, that number is expected to eclipse 50 billion. As processors, sensors, and wireless radios become smaller and more accessible, use cases for these devices are flourishing.
 
@@ -230,7 +235,10 @@ function printSwatches(colors, img) {
 
 <PostImage src="/projects/hue-gallery/limes.jpg" $size="large" />
 
-<Swatches colors={['#334c15', '#bdbb56', '#87ad46']} caption="Dominant colour extraction" />
+<Swatches
+  colors={['#334c15', '#bdbb56', '#87ad46']}
+  caption="Dominant colour extraction"
+/>
 
 ## Improving colour quality
 
@@ -241,19 +249,19 @@ To improve the extracted palette, we’ll first have Color Thief to return more 
 <PostImage src="/projects/hue-gallery/buildings.jpg" $size="large" />
 
 <Swatches
-colors={[
-'#e7dbd6',
-'#d5752f',
-'#392b27',
-'#a59fa2',
-'#857c7d',
-'#fbc04b',
-'#873f28',
-'#6b6365',
-'#5e514f',
-'#50474a',
-]}
-caption="Palette before – darker and less saturated colours aren't particularly interesting"
+  colors={[
+    '#e7dbd6',
+    '#d5752f',
+    '#392b27',
+    '#a59fa2',
+    '#857c7d',
+    '#fbc04b',
+    '#873f28',
+    '#6b6365',
+    '#5e514f',
+    '#50474a',
+  ]}
+  caption="Palette before – darker and less saturated colours aren't particularly interesting"
 />
 
 The colour properties we’re most interested in weighing here are lightness and saturation, so we’ll run the RGB values through a `rgbToHsl()` function so they’re easier to work with. With the resulting hue, saturation, and lightness values, we can get to work refining our palette.
@@ -274,7 +282,7 @@ Lastly, we’ll convert the colour values back to RGB and return the top 3 items
 
 <PostImage src="/projects/hue-gallery/buildings.jpg" $size="large" />
 
-<Swatches colors={['#fbc04b', '#d5752f', '#873f28']} caption="Palette after"/>
+<Swatches colors={['#fbc04b', '#d5752f', '#873f28']} caption="Palette after" />
 
 5. We’ve already enlisted CSS’ `vh` units to ensure only one image is fully in the viewport at a time, but which image is it? To determine if an image is visible, let’s write an `isVisible()` function that tests an element’s location in the viewport against the window’s `innerHeight`. We’ll use the native `getBoundingClientRect()` method to return a DOMRect object for each element and a [destructuring assignment](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment) to pull `bottom` and `top` values out of that object.
 
