--- a/content/writing/hacky-styling-of-visited-links/index.mdx
+++ b/content/writing/hacky-styling-of-visited-links/index.mdx
@@ -146,11 +146,12 @@ a.demo {
 Give it a try:
 
 <DemoButton
-href="http://bit.ly/16m376q"
-target="\_blank"
-rel="noopener noreferrer"
-$step="3">
-Click Me
+  href="http://bit.ly/16m376q"
+  target="\_blank"
+  rel="noopener noreferrer"
+  $step="3"
+>
+  Click Me
 </DemoButton>
 
 ## Wrap-up
