--- a/content/projects/anna-akana/index.mdx
+++ b/content/projects/anna-akana/index.mdx
@@ -18,6 +18,9 @@ Each short film added to the CMS has an accompanying hashtag on Instagram for be
 
 The design of the short-film list utilizes cinematic 2.4:1 video previews that loop a 10-15 second clips when hovered over. The short film detail pages are themeable from the CMS, and both header and detail sections fade to 10% opacity while the film is playing to help minimize distraction.
 
-<PostVideo src="/video/projects/anna-akana/anna-akana-website.mp4" $size="large" />
+<PostVideo
+  src="/video/projects/anna-akana/anna-akana-website.mp4"
+  $size="large"
+/>
 
 Anna has appeared in TV and film for Marvel/Disney, Netflix, Lionsgate, ABC, Comedy Central, YouTube Red, and others. Check out the site here: [annaakana.com](https://annaakana.com/).
