--- a/content/writing/herman-miller-lifework/index.mdx
+++ b/content/writing/herman-miller-lifework/index.mdx
@@ -12,7 +12,10 @@ This interview was originally conducted by [Amy Feezor](https://twitter.com/amyf
 
 </Note>
 
-<PostImage src="/writing/herman-miller-lifework/lifework-wide_3.jpg" $size="large" />
+<PostImage
+  src="/writing/herman-miller-lifework/lifework-wide_3.jpg"
+  $size="large"
+/>
 
 ##### Tell us about yourself and your work: what you’re passionate about, what inspires you, and where you’re going.
 
@@ -20,7 +23,10 @@ I focus on responsive, future-friendly, front-end design and development. This m
 
 I’m inspired by quality craft, regardless of medium. It is endearing to witness a maker who is good at what he or she is making. I’m also inspired by my city and the people who call it home. Winnipeg has an incredibly rich arts and cultural scene, especially for a city of relatively small size. In the past few years our downtown has seen some really cool architectural installations, like a huge steel/LED sculpture called “[Emptyful](https://www.winnipegarchitecture.ca/emptyful/)” that’s shaped like an Erlenmeyer flask, and [OMS Stage](https://architizer.com/projects/oms-stage/), an open-air performing arts venue that looks like it’s straight out of a science-fiction movie. When the rivers freeze in the winter, we clear [the longest skating trail in the world](https://www.youtube.com/watch?v=abVtRF5BdxA&feature=emb_title) and line it with [warming huts](http://www.warminghuts.com/) designed in an annual architectural competition. I think there’s something to be said for the resilience and outward thinking this city embraces.
 
-<PostImage src="/writing/herman-miller-lifework/lifework-wide_1.jpg" $size="large" />
+<PostImage
+  src="/writing/herman-miller-lifework/lifework-wide_1.jpg"
+  $size="large"
+/>
 
 ##### Tell us about your space. What’s your aesthetic? What do you like or dislike?
 
@@ -32,13 +38,19 @@ The big white pillow things on my walls are broadband absorbers that help elimin
 
 My window treatment (if I can even call it that) is several layers of translucent plastic tablecloth, held in place with binder clips and magnets. It turns my basement window well into a big softbox. When rabbits hop in the garden above it’s like a shadow puppet show without the puppets.
 
-<PostImage src="/writing/herman-miller-lifework/lifework-support_2.jpg" $size="large" />
+<PostImage
+  src="/writing/herman-miller-lifework/lifework-support_2.jpg"
+  $size="large"
+/>
 
 I’m constantly exploring ergonomics, and love finding new ways to make working better. Currently my wrists rest on a water-damaged piece of hardboard from an old drawer. This sits atop a stack of dollar-store craft foam that raises the leading edge of my keyboard and trackpad so they parallel my desk. I think most people have increased fidelity in their fingers and thumbs with their wrists either parallel to their desks or relaxed forward, instead of pulled back as most keyboard designs imply. This is in part why pianists are trained not to drop their wrists while playing.
 
 My display sits on a 3″ roll of black duct tape, the underside of which is covered by parchment paper. Parchment paper has a low coefficient of friction, so slides around my glass desk with ease.
 
-<PostImage src="/writing/herman-miller-lifework/lifework-support_3.jpg" $size="large" />
+<PostImage
+  src="/writing/herman-miller-lifework/lifework-support_3.jpg"
+  $size="large"
+/>
 
 If I could change anything about my current setup, I definitely wouldn’t be working on a black glass desk. It is an incredible pain to keep clean. I’d like to try a sit-stand desk with a wood surface and motorized legs.
 
@@ -48,6 +60,12 @@ I like them both, and they are very different. I typically start the work day in
 
 It may seem excessive to have two high-end chairs in such close proximity, but an investment in design and comfort is easily justifiable to someone who spends as much time at a desk as I do.
 
-<PostImage src="/writing/herman-miller-lifework/lifework-wide_2.jpg" $size="large" />
+<PostImage
+  src="/writing/herman-miller-lifework/lifework-wide_2.jpg"
+  $size="large"
+/>
 
-<PostImage src="/writing/herman-miller-lifework/lifework-support_1.jpg" $size="large" />
+<PostImage
+  src="/writing/herman-miller-lifework/lifework-support_1.jpg"
+  $size="large"
+/>
