Reduce size of kitchen before photos

--- a/content/projects/designing-a-home/index.mdx
+++ b/content/projects/designing-a-home/index.mdx
@@ -12,17 +12,16 @@ From 2017-2018, my wife and I had our home renovated. I designed the space, and 
 
 A friend had introduced me to SketchUp, and helped with some initial models of the space. Using these files as a starting point, I spent several months iterating on the design with increasing fidelity, revisiting the process as constraints emerged through demolition. Our house is close to 100 years old, and any renovation—especially in an old house⁠—is bound for surprises.
 
-<PostImage
-  src="/projects/designing-a-home/IMG_0148.jpg"
-  caption="Kitchen before"
-  $size="large"
-/>
-
-<PostImage
-  src="/projects/designing-a-home/IMG_0343.jpg"
-  caption="One such surprise: 6 inches of concrete under the previous kitchen floor"
-  $size="large"
-/>
+<Figure $size="large">
+  <Grid $gutter="calc(var(--spaceDefault) / 2)">
+    <GridItem $width={{ sm: '50%' }}>
+      <Img src="/projects/designing-a-home/IMG_0148.jpg" sizes="500px" />
+    </GridItem>
+    <GridItem $width={{ sm: '50%' }}>
+      <Img src="/projects/designing-a-home/IMG_0343.jpg" sizes="500px" />
+    </GridItem>
+  </Grid>
+</Figure>
 
 Working in 3D allowed me to more carefully consider the spaces and sightlines than a typical plan or one-off render. Using a friend’s VR rig, I walked through the models to better understand flow and utility. Many of the fixtures and appliances considered had 3D models available, so I was able to audition them in the space before making a commitment. When options were presented during the construction, I was able to model each permutation to better understand it in context, rather than rush a decision or leave it solely to the builder. It also helped immensely that the builder was comfortable with SketchUp, so I could send ideas over for them to assess feasibility. In the end, the build came remarkably close to the model.
 
