Make renovation before 2-up default

--- a/content/projects/designing-a-home/index.mdx
+++ b/content/projects/designing-a-home/index.mdx
@@ -14,10 +14,10 @@ A friend had introduced me to SketchUp, and helped with some initial models of t
 
 <Figure $size="large">
   <Grid $gutter="calc(var(--spaceDefault) / 2)">
-    <GridItem $width={{ sm: '50%' }}>
+    <GridItem $width={{ base: '50%' }}>
       <Img src="/projects/designing-a-home/IMG_0148.jpg" sizes="500px" />
     </GridItem>
-    <GridItem $width={{ sm: '50%' }}>
+    <GridItem $width={{ base: '50%' }}>
       <Img src="/projects/designing-a-home/IMG_0343.jpg" sizes="500px" />
     </GridItem>
   </Grid>
