Remove dead link, adjust formatting

--- a/content/writing/tesla-software-problems-in-winter/index.mdx
+++ b/content/writing/tesla-software-problems-in-winter/index.mdx
@@ -8,7 +8,7 @@ favicon: ❄️
 skipHero: true
 ---
 
-I've driven a Model 3 for two winters now, and generally speaking it's a good cold weather car. I live in the [coldest major city in Canada](https://www.tourismwinnipeg.com/winter-experiences), and I do _not_ miss pumping gas in -40°. The ability to preheat the car in a closed garage without worrying about fumes is also really nice.
+I've driven a Model 3 for two winters now, and generally speaking it's a good cold weather car. I live in the coldest major city in Canada, and I do _not_ miss pumping gas in -40°. The ability to preheat the car in a closed garage without worrying about fumes is also really nice.
 
 Tesla has received criticism for frozen door handles and other hardware features that don't perform optimally in winter, but in my experience, the area with the most room for improvement is software.
 
@@ -20,7 +20,7 @@ A Tesla's reduced range in winter is very real, but not as much of an issue as o
 
 What _is_ a problem driving a Tesla in cold weather is that the battery range indicator is not adjusted for temperature, so drivers have to guess how much range they have remaining.
 
-I collected data from all of my drives in temperatures below 0°C (32°F) over the course of two winters, and filtered trips that were less than 5 km. With a sample size of 181 drives, the average accuracy of my Tesla's range indicator in these conditions was 44.2%[^1]. **This means on average, for every 5 km driven, the range remaining went down by more than 11 km.** The accuracy varied considerably as well, from 71% to as low as 21% in extreme cold.
+I collected data from all of my drives in temperatures below 0°C (32°F) over the course of two winters, and filtered trips that were less than 5 km. With a sample size of 181 drives, the average accuracy of my Tesla's range indicator in these conditions was 44.2%[^1]. This means on average, for every 5 km driven, the range remaining went down by more than 11 km. The accuracy varied considerably as well, from 71% to as low as 21% in extreme cold.
 
 > This means on average, for every 5 km driven, the range remaining went down by more than 11 km.
 
