--- a/content/writing/tesla-software-problems-in-winter/index.mdx
+++ b/content/writing/tesla-software-problems-in-winter/index.mdx
@@ -97,7 +97,7 @@ The characteristics of the shadow are unlike any other in the UI; it's short, ha
 <PostImage
   src="/writing/tesla-software-problems-in-winter/0S7A3592.jpg"
   $size="large"
-  caption="Snowflake icon with inexplicable drop shadow in broader context"
+  caption="Snowflake icon in broader context"
 />
 
 Because of this, I can only assume the snowflake's drop shadow is a bug, and, since it only appears in cold weather, it's plausible that few designers at Tesla have ever seen it.
