Add caption to reno post

--- a/content/projects/designing-a-home/index.mdx
+++ b/content/projects/designing-a-home/index.mdx
@@ -21,6 +21,7 @@ A friend had introduced me to SketchUp, and helped with some initial models of t
       <Img src="/projects/designing-a-home/IMG_0343.jpg" sizes="500px" />
     </GridItem>
   </Grid>
+  <Caption>Surprise concrete under the kitchen floor</Caption>
 </Figure>
 
 Working in 3D allowed me to more carefully consider the spaces and sightlines than a typical plan or one-off render. Using a friend’s VR rig, I walked through the models to better understand flow and utility. Many of the fixtures and appliances considered had 3D models available, so I was able to audition them in the space before making a commitment. When options were presented during the construction, I was able to model each permutation to better understand it in context, rather than rush a decision or leave it solely to the builder. It also helped immensely that the builder was comfortable with SketchUp, so I could send ideas over for them to assess feasibility. In the end, the build came remarkably close to the model.
