Fix typo, sort imports

--- a/src/content/projects/designing-a-home/index.mdx
+++ b/src/content/projects/designing-a-home/index.mdx
@@ -59,7 +59,7 @@ Working in 3D allowed me to more carefully consider the spaces and sightlines th
 The final design attempts to blend old with new, and mixes modern lines with natural materials. This was the first space I've designed, but I found the principles familiar to what I knew in other disciplines, and learned a lot about the process along the way. I go into more detail about a few of my favourite features below.
 
 <ImageCompare
-  caption="Comparison of mid-demoliton and final"
+  caption="Comparison of mid-demolition and final"
   itemOne={image3}
   itemTwo={image4}
   position={50}
