--- a/src/content/projects/diy-homekit-thermostat/index.mdx
+++ b/src/content/projects/diy-homekit-thermostat/index.mdx
@@ -41,7 +41,7 @@ With this in mind, I could establish some requirements for a new _minimally_ con
 2. To know the temperature of the floors remotely
 3. Anything on the wall
 
-I find it useful to think about systems design in terms of inputs and outputs. When considering a thermostat in a standard heat-only sytem, the I/O might be:
+I find it useful to think about systems design in terms of inputs and outputs. When considering a thermostat in a standard heat-only system, the I/O might be:
 
 ###### Inputs
 
