Fix dateRange, remove blockquotes, misc. fixes

--- a/src/content/writing/a-dance-with-sinatra/index.mdx
+++ b/src/content/writing/a-dance-with-sinatra/index.mdx
@@ -9,8 +9,8 @@ status: live
 import { Note } from 'src/components';
 
 <Note>
-  This posts describes building a lightweight Markdown-powered blog engine in Ruby. Check out this
-  (2013) iteration of my site in the archives [here](https://2013.bradcerasani.me).
+  This posts describes building a lightweight Markdown-powered blog engine in Ruby. <br />
+  This (2013) iteration of my site in the archives [here](https://2013.bradcerasani.me).
 </Note>
 
 I've never been great at keeping a blog[^1]. Any space I've made for writing in the past has been as Shedbot, the moniker I've used for my photo/design work the past few years. I would always tread lightly posting on behalf a business, even my own. When speaking on behalf of a business you're always conscious of offending that exec who perhaps would've given you that big contract if he didn't see you talking about [ManBearPig](http://www.youtube.com/watch?v=xf69EEL3WBk) that one time.
