--- a/src/content/projects/designing-a-home/index.mdx
+++ b/src/content/projects/designing-a-home/index.mdx
@@ -2,7 +2,7 @@
 title: Designing a home
 description: Blending the old with the new in the renovation of our 1920s home, adventures in custom lighting fabrication, and learning how to model in 3D.
 date: 2018-01-01
-daterange: 2017–2018
+dateRange: 2017–2018
 image: ./designing-a-home.jpg
 status: live
 ---
