--- a/src/content/projects/hoist/index.mdx
+++ b/src/content/projects/hoist/index.mdx
@@ -2,7 +2,7 @@
 title: Hoist; the band years
 description: Fond memories of an intro to design and creative work.
 date: 2010-01-01
-daterange: 2005–2010
+dateRange: 2005–2010
 image: ./hoist.jpg
 status: live
 ---
