--- a/src/content/writing/tesla-software-problems-in-winter/index.mdx
+++ b/src/content/writing/tesla-software-problems-in-winter/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tesla software problems in winter
+title: Tesla software <br /> problems in winter
 description: When Designed in California™ meets -40°.
 date: 2021-03-29
 image: ./share-bright.jpg
@@ -24,9 +24,9 @@ A Tesla's reduced range in winter is very real, but not as much of an issue as o
 
 What _is_ a problem driving a Tesla in cold weather is that the battery range indicator is not adjusted for temperature, so drivers have to guess how much range they have remaining.
 
-I collected data from all of my drives in temperatures below 0°C (32°F) over the course of two winters, and filtered trips that were less than 5 km. With a sample size of 181 drives, the average accuracy of my Tesla's range indicator in these conditions was 44.2%[^1]. This means on average, for every 5 km driven, the range remaining went down by more than 11 km. The accuracy varied considerably as well, from 71% to as low as 21% in extreme cold.
+I collected data from all of my drives in temperatures below 0°C (32°F) over the course of two winters, and filtered trips that were less than 5 km. With a sample size of 181 drives, the average accuracy of my Tesla's range indicator in these conditions was 44.2%[^1]. This means on average, for every 1 km driven, the range remaining went down by more than 2 km. The accuracy varied considerably as well, from 71% to as low as 21% in extreme cold.
 
-> This means on average, for every 5 km driven, the range remaining went down by more than 11 km.
+> This means on average, for every 1 km driven, the range remaining went down by more than 2 km.
 
 With a few taps it is possible to view a graph of the car's efficiency over the last 50, 25, or 10 kilometres driven, and a weighted prediction of remaining range based on these values and current charge level. While this prediction is generally more accurate than the primary range indicator, the assumption that efficiency of the previous `n` kilometres driven is indicative of the next `m` kilometres driven is still often wrong, and exposes an interesting bias in its design.
 
