--- a/src/content/writing/the-black-pixel-web-stack/index.mdx
+++ b/src/content/writing/the-black-pixel-web-stack/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: The Black Pixel web stack
+title: The Black Pixel <br /> web stack
 description: Written shortly after the formalization of Black Pixel's Web Services team, this post features our go-to tools and technologies for developing great experiences.
 date: 2016-06-08
 status: live
@@ -18,7 +18,7 @@ Every day there’s a shiny new framework or library that seemingly everyone is 
 
 Here are some of the tried, tested, and true language choices and frameworks that we at Black Pixel keep coming back to to get work done.
 
-#### JavaScript
+### JavaScript
 
 As the programming language of the web browser, JavaScript has always been popular, but it’s evolved to become really powerful too.
 
@@ -30,40 +30,23 @@ Suddenly the programming language once treated as a toy had proper module suppor
 
 Today, modern browsers and the latest version of Node are [nearing 100-percent compatibility](http://kangax.github.io/compat-table/es6/) with this latest version of JavaScript. The language is more ubiquitous than ever before, and new use cases for it emerge every day.
 
-<blockquote>
-  <p lang="en" dir="ltr">
-    <a href="https://twitter.com/CollinEstes">@CollinEstes</a> I heard a rumor that NASA uses
-    Node.js for space-suits. I&#39;m curious, do you use the npm ecosystem to develop these apps?
-  </p>{' '}
-  &mdash; Benjamin Coe (
-  <a href="https://twitter.com/BenjaminCoe/status/738764829746286592">@BenjaminCoe</a>){' '}
-</blockquote>
-
-<blockquote>
-  <p lang="en" dir="ltr">
-    <a href="https://twitter.com/BenjaminCoe">@BenjaminCoe</a> You heard correctly, and yes we do.
-  </p>{' '}
-  &mdash; Collin Estes (
-  <a href="https://twitter.com/collinestes/status/738765249407504384">@CollinEstes</a>)
-</blockquote>
-
 However, the rising popularity of JavaScript also brings a certain amount of “[JavaScript fatigue](https://medium.com/@ericclemmons/javascript-fatigue-48d4011b6fc4),” especially when six years of language development land in a single release as happened with ES2015 last year. Fortunately steps are being taken to ensure [future releases of ECMAScript/JS](http://www.2ality.com/2015/11/tc39-process.html) are smaller and more frequent, and there are many [roundup-style newsletters](http://javascriptweekly.com/) and [websites](http://www.echojs.com/) that help filter signal through the noise of the bustling ecosystem that is modern-day JS development.
 
 ## Frameworks and libraries
 
-#### React
+### React
 
 [React](https://facebook.github.io/react/) is “a JavaScript library for building user interfaces.” Where Angular tried to solve the Model, View, and Controller components of traditional MVC application architecture, React focuses solely on the view layer. React introduced us to the virtual DOM, a tree of JavaScript objects that mimics the browser’s DOM. When state changes in a React application, it updates the virtual DOM first, then diffs the result with the browser’s DOM, and propagates these changes only to the elements that have changed instead of the entire view. This makes React super performant. And, since it only focuses on view logic, it’s easy to drop into existing applications without a complete rewrite.
 
-#### Redux
+### Redux
 
 [Redux](http://redux.js.org/) is “a predictable state container for JavaScript applications.” When React was first announced, Facebook’s engineers also announced something called Flux. Flux described a unidirectional application architecture well-suited for React apps but was more conceptual than tangible code or API. As such, many developers began working on their own Flux implementations for use with React. In June of 2015, developer Dan Abramov released Redux, a simple Flux-inspired state manager that borrows some patterns of immutability from [Elm](https://github.com/evancz/elm-architecture-tutorial). The simple API and excellent developer tooling of Redux helped it quickly become the de facto Flux implementation. While basic React applications can get by using its built-in state methods, passing state through component props gets unruly fast. That’s where a global state container like Redux saves the day.
 
-#### Node
+### Node
 
 As mentioned above, Node marries an event-based, asynchronous API with Chrome’s super fast V8 engine, and runs on the server. Using JavaScript for server-side development with Node allows developers to tap into the largest open-source module ecosystem in the world with npm. It also reduces the amount of context switching that’s necessary when bouncing between different parts of the application stack. With the modern-day proliferation of JavaScript, many companies employ Node middleware that sits between older, monolithic application code and newer, interactive client-side experiences. Node and pure JavaScript applications are also being used in greenfield projects where few technical constraints exist. When this is the case, our team leans on application frameworks like the Sinatra-inspired [Express](http://expressjs.com/) or batteries-included [Hapi](http://hapijs.com/) to be productive right away.
 
-#### PostCSS
+### PostCSS
 
 [PostCSS](http://postcss.org/) takes CSS source files and creates an abstract syntax tree (AST) of the contents it exposes via API. The rich plugin ecosystem of PostCSS allows developers to do almost anything imaginable to a CSS file’s contents. One of the most common uses for PostCSS is transpiling future CSS syntax to current-day syntax, so browsers can reliably interpret features like custom properties and the `var()` function for variable support. PostCSS is often referred to as some lofty technology that is _more_ proprietary than popular preprocessors like Sass, but this is far from the truth. PostCSS allows developers to write _less_ proprietary syntax. Bypassing Sass removes an enormous amount of abstraction between style input and output, resulting in better code. PostCSS forces you to think about what plugins you’d like to use to manipulate your code, instead of giving you more than you need.
 
@@ -71,13 +54,13 @@ As mentioned above, Node marries an event-based, asynchronous API with Chrome’
 
 <PostVideo src="./6ix-lint.mp4" />
 
-#### JavaScript
+### JavaScript
 
 When writing JavaScript, we follow the paradigms of [functional programming](https://drboolean.gitbooks.io/mostly-adequate-guide/content/). Functional programming is programming without [side effects](<https://en.wikipedia.org/wiki/Side_effect_(computer_science)>). It focuses on small, composable functions rather than object-oriented programming that relies heavily on classes and mutation.
 
 To lint our JavaScript, we use [ESlint](http://eslint.org/) with an adapted version of [Airbnb’s style guide](https://github.com/airbnb/javascript). This ensures consistent formatting and code style between developers and helps check code for unused variables, typos, and mutations.
 
-#### CSS
+### CSS
 
 When writing CSS we use [atomic, immutable classes](http://csswizardry.com/2015/03/immutable-css/) and [ITCSS](https://www.youtube.com/watch?v=1OKZOV-iLj4) architecture, with [SUITCSS](https://suitcss.github.io/)-inspired naming convention and [object/utility namespaces](http://csswizardry.com/2015/03/more-transparent-ui-code-with-namespaces/). [UsonianCSS](https://github.com/bradcerasani/usoniancss) is a cumulation of these ideas and serves as our baseline CSS boilerplate on greenfield projects.
 
