Purge unused styles, tighten up base

--- a/src/content/writing/tesla-software-problems-in-winter/index.mdx
+++ b/src/content/writing/tesla-software-problems-in-winter/index.mdx
@@ -72,7 +72,7 @@ Further, when windshield defrost _is_ actually needed, the first tap of the cont
 
 ## Night mode at sunset
 
-Tesla screens automatically switch to night (dark) mode at sunset, which is essential for keeping one's eyes adjusted to driving in the dark. However, the duration of twilight—i.e. the time between sunset and actual darkness or astronomical dusk—varies considerably based on time of year and distance from the equator. During winter in northern climates, the sky is still light far after sunset. **Within a certain proximity to either pole, twilight can last for hours**[^4].
+Tesla screens automatically switch to night (dark) mode at sunset, which is essential for keeping one's eyes adjusted to driving in the dark. However, the duration of twilight—i.e. the time between sunset and actual darkness or astronomical dusk—varies considerably based on time of year and distance from the equator. During winter in northern climates, the sky is still light far after sunset. **Within a certain proximity to either pole, twilight can last for hours[^4]**.
 
 Switching to night mode before it is dark out can introduce glare that makes the screen difficult to see. The screen's ambient light sensor still works but it only adjusts backlight brightness, and no amount of backlight behind a dark UI will come close to legibility of a light UI when it's still light out.
 
