Update video path

--- a/src/content/projects/garage/index.mdx
+++ b/src/content/projects/garage/index.mdx
@@ -2,7 +2,7 @@
 title: Garage design/build
 description: A DIY garage design/build with non-trivial scope creep.
 date: 2019-01-01
-video: ./garage-animation-slow-optimized.mp4
+video: ./garage-animation.mp4
 status: live
 ---
 
