Use loading="eager" for images above fold

--- a/src/content/projects/designing-a-home/index.mdx
+++ b/src/content/projects/designing-a-home/index.mdx
@@ -31,6 +31,7 @@ A friend had introduced me to SketchUp, and helped with some initial models of t
         sizes="(max-width: 960px) 50vw, (min-width: 961px) 500px"
         widths={[250, 500, 750, 1000]}
         alt="Kitchen before"
+        loading="eager"
       />
     </GridItem>
     <GridItem width={{ base: '50%' }}>
@@ -39,6 +40,7 @@ A friend had introduced me to SketchUp, and helped with some initial models of t
         sizes="(max-width: 960px) 50vw, (min-width: 961px) 500px"
         widths={[250, 500, 750, 1000]}
         alt="Jackhammering concrete out of kitchen"
+        loading="eager"
       />
     </GridItem>
   </Grid>
