--- a/src/content/projects/garage/index.mdx
+++ b/src/content/projects/garage/index.mdx
@@ -12,7 +12,7 @@ In the summer of 2019, I designed and built a garage.
 
 The structure is clad in continuous vertical planks of western red cedar, and features a concealed flush-mount door automated with HomeKit.
 
-<PostImage src="./garage.jpg" size="large" caption="Concealed one-piece door" />
+<PostImage src="./garage.jpg" size="large" caption="Concealed one-piece door" loading="eager" />
 
 <PostImage src="./0S7A8334.jpg" size="large" caption="Mitred corners" />
 
