--- a/src/content/projects/hoist/index.mdx
+++ b/src/content/projects/hoist/index.mdx
@@ -20,6 +20,7 @@ We played dozens of shows over the years, from backyards to theatres–even one 
   src="./3114.jpg"
   size="large"
   caption="Hoist live at The Park Theatre in Winnipeg c. 2006 – photo by JT Austin"
+  loading="eager"
 />
 
 <PostImage
