--- a/src/content/writing/herman-miller-lifework/index.mdx
+++ b/src/content/writing/herman-miller-lifework/index.mdx
@@ -16,7 +16,7 @@ This interview was originally conducted by [Amy Feezor](https://twitter.com/amyf
 
 </Note>
 
-<PostImage src="./lifework-wide_3.jpg" size="large" alt="Brad Cerasani × Herman Miller Lifework" />
+<PostImage src="./lifework-wide_3.jpg" size="large" alt="Brad Cerasani × Herman Miller Lifework" loading="eager" />
 
 ## Tell us about yourself and your work: what you’re passionate about, what inspires you, and where you’re going.
 
