--- a/src/content/writing/liftoff/index.mdx
+++ b/src/content/writing/liftoff/index.mdx
@@ -20,6 +20,7 @@ Shedbot 2.0 reflects a sharper focus on building for the web. The old website ha
   src="./moon.jpg"
   caption='Moon over Kenora, Ontario – 10" f4.7 Newtonian telescope, Canon 7D'
   size="large"
+  loading="eager"
 />
 
 Load weight on mobile is 316K, 375K for mobile retina, 960K at largest non-retina breakpoint, and a respectable 1511K for widescreen retina.
